Updated the install command

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 <p>Easy! Just paste this in your favorite terminal and you are ready to go.</p>
 
-<pre><code>curl -L https://github.com/erasmospunk/pychohistory/tarball/master | tar zx &amp;&amp; cd pychohistory &amp;&amp; python setup.py
+<pre><code>
+  git clone https://github.com/erasmospunk/pychohistory.git && cd pychohistory && pip install requests
 </code></pre>
 
 <p>See <code>pychohistory -h</code> for help</p>
