added favicon and logo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-114.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-144.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
@@ -38,9 +44,10 @@
 
 <p>Easy! Just paste this in your favorite terminal and you are ready to go.</p>
 
-<pre><code>
-  git clone https://github.com/erasmospunk/pychohistory.git && cd pychohistory && pip install requests
-</code></pre>
+<code><pre>
+git clone https://github.com/erasmospunk/pychohistory.git \
+&& cd pychohistory && pip install requests
+</pre></code>
 
 <p>See <code>pychohistory -h</code> for help</p>
 
